@@ -222,7 +222,7 @@ else
     AC_DEFINE(HAVE_S_ISREG)
     AC_DEFINE(HAVE_S_IFREG)
   else
-    m4_include([crossconfig.m4])
+    GLIBCXX_CROSSCONFIG
   fi
 
   # At some point, we should differentiate between architectures
